--- a/src/App.css
+++ b/src/App.css
@@ -23,4 +23,13 @@
   position: absolute;
   top: 10px;
   right: 10px;
+  color: red;
+  border-radius: 50%;
+  border: none;
+  padding: 3px 6px;
+}
+
+.complite {
+  text-decoration-line: line-through;
+  color: grey;
 }
